movie-search/src/style/main.scss
// colors
$primary: #243441 !default;
$primary-dark: #1d2831 !default;
$secondary: #c7d4df !default;
$interface: #7c858d !default;
$visited: #c7d4df;
$accent: #0affef !default;
$disabled: #ced4da !default;
$shadow-1: #ffffff !default;
$shadow-2: #000000 !default;
$rating: #19686d;
// width
$interface-height: 40px;
$keyboard-btn-width: 32px;
$clear-btn-width: 23px;

// fonts
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");

$font-h1: 700 24px/28px Roboto;
$font-titles: 500 18px/21px Roboto;
$font-year: 400 14px/16px Roboto;

html,
body {
  position: relative;
  height: 100%;
}



.navbar-brand {
  font: $font-h1;
}

// temp
.mask {
  width: 100vw;
  height: 100vh;
  position: absolute;
  z-index: 10;
  background: #1f2b36b8;
}
.player-container {
  background: #1f2b36b8;
}

#player {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  z-index: 11;
}

.youtube-video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
// end temp

body {
  min-height: 100vh;
  background: $primary;
  background: radial-gradient(circle, $primary 0%, $primary-dark 100%);
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: $accent;
  margin: 0;
  padding: 0;
}

.form-search__keyboard {
  position: relative;
  width: 32px;
  height: 23px;
  margin: 0;
  padding: 0;
  right: $keyboard-btn-width + 8px;
  background-color: inherit;
  box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.15);
  border-radius: 5px;
  border: none;

  svg.fa-keyboard {
    width: 22.86px;
    height: 22.15px;
    color: $interface;
  }
}

.form-search__clear {
  position: relative;
  z-index: -1;
  display: flex;
  justify-content: center;
  width: $clear-btn-width;
  height: 23px;
  margin: 0;
  padding: 0;
  right: $keyboard-btn-width * 2 + $clear-btn-width + 16px;
  background-color: inherit;
  box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.15);
  border-radius: 5px;
  border: none;

  svg.fa-times {
    width: 16px;
    height: 16px;
    color: $interface;
  }
}

.form-search__clear:hover,
.form-search__keyboard:hover {
  svg {
    color: $accent;
  }
}

.form-search__input {
  display: block;
  width: 320px;
  height: $interface-height;
  padding-left: 2.5rem;
  background-color: $primary;
  border: none;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 2px 1px 4px rgba(0, 0, 0, 0.5),
    inset -2px -2px 4px rgba(255, 255, 255, 0.15);
  background-image: url(../img/search.svg);
  background-repeat: no-repeat;
  background-position-x: 0.75rem;
  background-position-y: calc(0.25em + 0.25rem + 4px);
  background-size: calc(1em + 0.25rem);
  border-radius: 5px;
  color: $secondary;
}

.form-search__input::placeholder {
  color: $interface;
}

.form-search__input:focus::placeholder {
  opacity: 0;
}

.form-search__input:focus {
  background-color: $primary;
  padding-left: 2.5rem;
  background-size: 0;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 2px 1px 4px rgba(0, 0, 0, 0.5),
    inset -2px -2px 4px rgba(255, 255, 255, 0.15);
  outline: none;
}

.form-search__button {
  width: 112px;
  position: relative;
  right: $clear-btn-width + $keyboard-btn-width - 16px;
  height: $interface-height;
  background-color: $primary;
  color: $accent;
  border: none;
  box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.15);
  border-radius: 5px;
  font: $font-titles;

  :focus {
    outline: none;
  }
}

.form-search__button:focus {
  outline: none;
}

.swiper-wrapper {
  padding-bottom: 86px;
  /* width: 100%; */
  /* height: 50%; */
}

.swiper-button-prev:after {
  content: none;
}

.swiper-button-next:after {
  content: none;
}

.swiper-button-prev,
.swiper-button-next {
  width: 64px;
  height: 64px;
  top: calc(50% - 50px);
  background: #243441;
  box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.5), -2px -2px 4px rgba(255, 255, 255, 0.15);
  border-radius: 5px;
  :focus {
    outline: 1px solid #fff;
    outline-offset: -4px;
  }
  svg.fa-caret-square-right,
  svg.fa-caret-square-left {
    height: 50px;
    width: 50px;
    color: $accent;
  }
}

.swiper-button-prev {
  left: -33px - 64px; // 33 + button-width
  right: auto;
}

.swiper-button-next {
  right: -33px - 64px; // 33 + button-width
  left: auto;
}

.swiper-button-prev:focus,
.swiper-button-next:focus,
button:focus {
  outline: none;
}

.swiper-button-next:active,
.swiper-button-prev:active,
.form-search__button:active,
.form-search__clear:active,
.form-search__keyboard:active {
  color: $visited;
  background: #243441;
  box-shadow: inset 2px 1px 4px rgba(0, 0, 0, 0.5), inset -2px -2px 4px rgba(255, 255, 255, 0.15);
  border-radius: 5px;
}

.swiper-pagination-bullet {
  width: 16px;
  height: 16px;
  box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.15), inset 2px 1px 4px rgba(0, 0, 0, 0.5);
}

.swiper-pagination-bullet-active {
  background-color: rgba(10, 255, 239, 0.4);
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: transparent;
  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  height: 90%;
}

.swiper-slide__poster > img {
  height: 100%;
  width: auto;
  float: left;
}

.swiper-slide__poster {
  position: relative;
  height: 230px;
  max-width: 170px;
  overflow: hidden;
  display: flex;
  justify-content: center;

  .swiper-slide__rating {
    display: flex;
    align-items: center;
    width: 40px;
    height: 43px;
    position: absolute;
    right: 4px;
    font: $font-year;
    background-color: $rating;
    border-bottom-left-radius: 2px;
    border-bottom-right-radius: 2px;

    span {
      color: $secondary;
      font: $font-year;
      font-weight: 500;
    }
  }
}

.swiper-slide__title {
  height: 3rem;
  color: $accent;
  text-decoration: underline;
  display: flex;
  align-items: flex-end;
  font: $font-titles;
  padding-bottom: 0.5rem;
}

.swiper-slide__year {
  height: 2rem;
  display: flex;
  align-items: center;
  padding-top: 0.25rem;
  font: $font-year;
  color: $secondary;
}

.swiper-slide__stars {
  height: 2rem;
  display: flex;
  align-items: center;
  padding-top: 0.25rem;
}

.fa-star.fass_full,
.fa-star-half-alt,
.fa-star.fass_pool {
  margin-left: 6px;
  color: $secondary;
}

.spinner-border {
  height: 1rem;
  width: 1rem;
  border-width: medium;
  margin-right: 10px;
}

.form-search .btn {
  width: 103px;
}

.container__alert {
  min-height: 50px;
  text-align: center;
  font: $font-titles;
}

.alert.alert-danger,
.alert.alert-primary {
  background-color: initial;
  border: none;
  color: $visited;
  margin-bottom: 0;
}

.alert.alert-danger {
  color: $accent;
}

.swiper-pagination .swiper-pagination-bullet:nth-child(n + 15) {
  display: none;
}

footer {
  background-color: $primary-dark;

  .github,
  .rolling-scopes {
    font: 500 12px/14px Roboto;
    svg {
      margin-right: 10px;
    }
  }
}


@media (max-width: 374px) {
  html {
    font-size: 12px;
  }

  header nav {
    height: 48px;
    margin-bottom: 24px;
  }

  .form-inline.mt-4 {
    margin-top: 0 !important;
    height: 40px;
  }

  .form-search__input {
    width: 100%;
    background-position-x: calc(100% - 0.75rem);
    transition: background-size 0.15s;
    transition-delay: 0.1s;
  }

  .form-search__button,
  .form-search__keyboard {
    display: none;
  }

  .form-search__clear {
    position: relative;
    bottom: 31px;
    left: calc(100% - 23px - 0.75rem);
  }

  .container__alert {
    min-height: 25px;
  }

  .container__alert .alert {
    padding: 0;
    height: 25px;
  }

  .swiper-slide__poster {
    height: 300px;
    max-width: initial;
  }

  .swiper-wrapper {
    padding-bottom: 0px;
  }

  .swiper-slide {
    flex-direction: row;
  }

  .swiper-slide__title {
    width: 100%;
    justify-content: center;
  }

  .swiper-slide__poster > img {
    height: 100%;
    width: auto;
  }

  .swiper-slide__year {
    width: 100%;
    margin-top: 6px;
    justify-content: center;
  }

  .swiper-slide__stars {
    display: none;
  }

  .swiper-pagination {
    display: none;
  }

  .swiper-button-prev,
  .swiper-button-next {
    display: none;
  }
}



@media (min-width: 375px) and (max-width: 767px) {
  html {
    font-size: 14px;
  }

  header nav {
    height: 48px;
    margin-bottom: 24px;
  }

  .form-inline.mt-4 {
    margin-top: 0 !important;
    height: 40px;
  }

  .form-search__input {
    width: 100%;
    background-position-x: calc(100% - 0.75rem);
    transition: background-size 0.15s;
    transition-delay: 0.1s;
  }

  .form-search__button,
  .form-search__keyboard {
    display: none;
  }

  .form-search__clear {
    position: relative;
    bottom: 31px;
    left: calc(100% - 23px - 0.75rem);
  }

  .container__alert {
    min-height: 25px;
  }

  .container__alert .alert {
    padding: 0;
    height: 25px;
  }

  .swiper-wrapper {
    padding-bottom: 0px;
  }

  .swiper-slide__poster {
    max-width: 270px;
    height: 330px;
  }

  .swiper-slide__poster > img {
    height: 100%;
    width: auto;
    max-width: initial;
  }

  .swiper-slide__title {
    width: 100%;
    justify-content: center;
  }

  .swiper-slide__year,
  .swiper-slide__stars {
    width: 100%;
    margin-top: 6px;
    justify-content: center;
  }

  .swiper-pagination {
    display: none;
  }

  .swiper-button-prev,
  .swiper-button-next {
    display: none;
  }
}

@media (min-width: 560px) and (max-width: 767px) {
  .container.position-relative {
    max-width: 510px;
  }

  .swiper-slide__poster {
    height: 320px;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  html {
    font-size: 16px;
  }

  .swiper-slide__poster {
    height: 220px;
  }

  .swiper-slide__title {
    width: 100%;
    justify-content: center;
  }

  .swiper-slide__poster > img {
    height: 100%;
    width: auto;
  }

  .swiper-slide__year,
  .swiper-slide__stars {
    width: 100%;
    margin-top: 6px;
    justify-content: center;
  }
}

@media (min-width: 768px) {
  .swiper-slide__poster:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    opacity: 0;
  }
  
  .swiper-slide__poster:after {
    content: "";
    background-image: url(../img/youtube.svg);
    background-repeat: no-repeat;
    background-size: 4rem;
    background-position: center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0;
    transition: all .4s ease-out;
  }
  
  .swiper-slide__poster:hover:before,
  .swiper-slide__poster:hover:after {
    opacity: 1;
  }
}

